# repl-rlm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
baml_src/: clients.baml  generators.baml  rlm_root.baml
baml_src/tools/: rolling.baml
docs/: formatting.md  improvements.md
src/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/repl_rlm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/repl_rlm/db/sql/: 0000_shared.sql  0001_runs.sql  0002_turns.sql  0003_tools.sql  0004_llm_functions.sql  0005_run_tools.sql  0006_run_llm_functions.sql
src/repl_rlm/experiments/: __init__.py  experiment_formatting.py  experiment_generator.py  experiment_types.py  experiment_utils.py  experiment_validation.py
src/repl_rlm/repl/: __init__.py  errors.py
src/repl_rlm/repl/expressions/: __init__.py  expression_interpreter.py  expression_validator.py  expressions.py
src/repl_rlm/repl/runtime/: __init__.py  config.py  runtime.py  runtime_state.py
src/repl_rlm/repl/steps/: __init__.py  step_interpreter.py  step_validator.py  steps.py
src/repl_rlm/tools/rolling/: __init__.py  rolling.py
src/rlm/: rlm_ast.py  rlm_types.py  runtime_state.py
src/rlm/interpreter/: expression_interpreter.py
src/rlm/repl/: errors.py
src/rlm/repl/expressions/: expression_interpreter.py  expression_validator.py  expressions.py
tests/repl_rlm/: test_package_exports.py
tests/repl_rlm/experiments/: test_experiment_generator.py
tests/repl_rlm/repl/: test_errors.py
(+14 files in other folders)
